# HTML2NDI

./: .cursorrules  .gitignore  AGENTS.md  APP_BUNDLE_PROGRESS.md  AppIcon.icns  BUILD_COMPLETE.md  BUILD_STATUS.md  BUILD_SUCCESS.md  CMakeLists.txt  CRASH_FIX.md  GENLOCK_DIAGNOSIS.md  GENLOCK_FIX_SUMMARY.md  README.md  RELEASE_NOTES.md  SECURITY_SUMMARY.txt  html2ndi
.github/workflows/: build.yml  release-matrix.yml  release-parallel.yml  release.yml
DawnCache/: index
GPUCache/: index
cmake/: CEF.cmake  NDI.cmake
docs/: AGENT_INSTRUCTIONS.md  DASHBOARD_GENLOCK.md  DASHBOARD_LAYOUT.txt  NETWORK_INTERFACE_GUIDE.md  NETWORK_PERMISSIONS.md  PERFORMANCE_MONITORING.md  README.md  SECURITY_AUDIT.md  SECURITY_CHECKLIST.md  STUTTERING_FIX.md  WORKFLOW_COMPARISON.md  genlock-dashboard-guide.md  genlock-implementation-summary.md  genlock.md
docs/archive/: BUILD_COMPLETE.md  CRASH_FIX.md  FINAL_RELEASE.md  GENLOCK_DIAGNOSIS.md  GENLOCK_FIX_SUMMARY.md  GITHUB_RELEASE_READY.md  README.md  RELEASE_SUMMARY.md
include/html2ndi/: application.h  config.h
include/html2ndi/cef/: cef_app.h  cef_handler.h  offscreen_renderer.h
include/html2ndi/http/: http_server.h
include/html2ndi/ndi/: frame_pump.h  genlock.h  ndi_sender.h
include/html2ndi/utils/: image_encode.h  logger.h  signal_handler.h  watchdog.h
manager/: Package.swift  build.sh
manager/HTML2NDI Manager/: DashboardView.swift  HTML2NDIManagerApp.swift  Info.plist  Logger.swift  ManagerServer.swift  MenuBarView.swift  NetworkPermissionChecker.swift  StreamManager.swift
manager/Resources/: AppIcon.icns
manager/Tests/: DashboardViewTests.swift
resources/: Info.plist  com.html2ndi.plist  control-panel.html  entitlements.plist  helper-Info.plist  test.html
scripts/: html2ndi  install.sh  pre-release-check.sh  run.sh  uninstall.sh
src/app/: application.cpp  config.cpp  main.cpp
src/cef/: cef_app.cpp  cef_handler.cpp  cef_helper.cpp  offscreen_renderer.cpp
src/http/: http_server.cpp
src/ndi/: frame_pump.cpp  genlock.cpp  ndi_sender.cpp
src/utils/: image_encode.cpp  logger.cpp  signal_handler.cpp  watchdog.cpp
tests/: test_cef_init.sh
tests/cpp/: test_config.cpp  test_genlock.cpp  test_http_api.cpp  test_logger.cpp  test_main.cpp  test_ndi_sender.cpp  test_watchdog.cpp
tests/integration/: README.md  test_ci.sh  test_ndi_output.py  test_ndi_output.sh  test_performance.sh
tests/mocks/: Processing.NDI.Lib.h  README.md  ndi_mock.cpp
tests/web/: README.md  genlock-dashboard-tests.html  resolution-preset-tests.html
